[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/level_parts/enemy_spawning/enemy_spawner.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=79]
extents = Vector3( 2, 2, 2 )

[node name="enemy_spawner" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 79 )

[node name="check_for_death" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="check_for_death" to="." method="_on_check_for_death_timeout"]
